force-app/main/default/objects/Apex_Test_Run_Container__c/Apex_Test_Run_Container__c.object-meta.xml
<CustomObject>
    <label>Apex Test Run Container</label>
    <nameField>
        <displayFormat>TR-{000}</displayFormat>
        <label>Apex Test Run Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Test Run Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>