force-app/main/default/objects/Apex_Test_Run_Container__c/fields/All_Test_Classes_Processed__c.field-meta.xml
<CustomField>
    <fullName>All_Test_Classes_Processed__c</fullName>
    <label>All Test Classes Processed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>