force-app/main/default/objects/Apex_Test_Run_Container__c/fields/Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Apex_Job_Id__c</fullName>
    <label>Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>