force-app/main/default/objects/Apex_Test_Run_Container__c/fields/Is_Result_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Result_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Result Updated</label>
    <type>Checkbox</type>
</CustomField>