force-app/main/default/objects/Apex_Test_Run_Container__c/fields/Number_of_Test_Classes_Processed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Test_Classes_Processed__c</fullName>
    <label>Number of Test Classes Processed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>