force-app/main/default/objects/Apex_Test_Run_Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>All_Test_Classes_Processed__c</columns>
    <columns>Async_Apex_Job_Id__c</columns>
    <columns>Is_Result_Updated__c</columns>
    <columns>Number_of_Test_Classes_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>